<resources>
    <string name="app_name">Kite Quiz App</string>

    <string name="question_One">1. Kites were invented in </string>
    <string name="qOne1">England</string>
    <string name="qOne2">China</string>
    <string name="qOne3">Brazil</string>

    <string name="question_Two">2. What shape can a kite be? (Select all that apply.) </string>
    <string name="qT1">quadrilateral</string>
    <string name="qT2">tetrahedral</string>
    <string name="qT3">diamond</string>
    <string name="qT4">cube</string>
    <string name="qT5">pentagon</string>


    <string name="question_Three">3. How much wind does it take to fly a kite? </string>
    <string name="qThree1">4-10 mph</string>
    <string name="qThree2">1-3 mph</string>
    <string name="qThree3">11-15 mph</string>

    <string name="question_Four">4. Never fly a kite during a thunderstorm.</string>

    <string name="question_Five">5. April is National Kite Month</string>

    <string name="question_Six">6. Have you flown a kite before? [Yes/No]</string>

    <string name="Si">True</string>
    <string name="No">False</string>

</resources>

